# stabelo_code_test

./: .gitignore  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: elevator-system.ts  index.ts
frontend/: package-lock.json  package.json
frontend/application/pages/implementation/: ImplementationPage.module.scss  ImplementationPage.tsx
lib/elevate/: Cargo.toml
lib/elevate/src/: lib.rs
