[package]
name = "elevate"
version = "0.1.0"
authors = ["Bawer Dagdeviren <bawer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.68"
wasm-bindgen-test = "0.3.18"
